if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    add_subdirectory(Darwin-Kernel)
    add_subdirectory(MacOSX-DYLD)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    add_subdirectory(POSIX-DYLD)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    add_subdirectory(Windows-DYLD)
else ()
    message(FATAL_ERROR "Platform not supported")
endif ()
if (false)
add_subdirectory(Darwin-Kernel)
add_subdirectory(FreeBSD-Kernel)
add_subdirectory(MacOSX-DYLD)
add_subdirectory(POSIX-DYLD)
add_subdirectory(Static)
add_subdirectory(Hexagon-DYLD)
add_subdirectory(Windows-DYLD)
add_subdirectory(wasm-DYLD)
endif ()
