if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    add_subdirectory(Mach-O)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    add_subdirectory(ELF)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    add_subdirectory(PDB)
    add_subdirectory(COFF)
    add_subdirectory(PECOFF)
else ()
    message(FATAL_ERROR "Platform not supported")
endif ()
if (false)
add_subdirectory(Breakpad)
add_subdirectory(COFF)
add_subdirectory(ELF)
add_subdirectory(JSON)
add_subdirectory(Mach-O)
add_subdirectory(Minidump)
add_subdirectory(PDB)
add_subdirectory(PECOFF)
add_subdirectory(Placeholder)
add_subdirectory(wasm)
endif ()
