if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  add_subdirectory(MacOSX)
  add_subdirectory(POSIX)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  add_subdirectory(Linux)
  add_subdirectory(POSIX)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  add_subdirectory(Windows)
else ()
 message(FATAL_ERROR "Platform not supported")
endif ()
if (false)
add_subdirectory(Android)
add_subdirectory(FreeBSD)
add_subdirectory(gdb-server)
add_subdirectory(Linux)
add_subdirectory(MacOSX)
add_subdirectory(NetBSD)
add_subdirectory(OpenBSD)
add_subdirectory(POSIX)
add_subdirectory(QemuUser)
add_subdirectory(Windows)
endif ()
