if (CMAKE_SYSTEM_NAME MATCHES "Linux|Android")
  add_subdirectory(Linux)
  add_subdirectory(POSIX)
elseif (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
  add_subdirectory(FreeBSD)
  add_subdirectory(POSIX)
elseif (CMAKE_SYSTEM_NAME MATCHES "NetBSD")
  add_subdirectory(NetBSD)
  add_subdirectory(POSIX)
elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
  add_subdirectory(Windows/Common)
elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
  add_subdirectory(MacOSX-Kernel)
endif()
add_subdirectory(scripted)
add_subdirectory(gdb-remote)
add_subdirectory(Utility)
if (false)
add_subdirectory(elf-core)
endif()
add_subdirectory(mach-core)
if (false)
add_subdirectory(minidump)
add_subdirectory(FreeBSDKernel)
endif()
