if (CMAKE_SYSTEM_NAME MATCHES "Linux|Android")
  add_subdirectory(Linux)
  add_subdirectory(POSIX)
elseif (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
  add_subdirectory(FreeBSD)
  add_subdirectory(POSIX)
elseif (CMAKE_SYSTEM_NAME MATCHES "NetBSD")
  add_subdirectory(NetBSD)
  add_subdirectory(POSIX)
elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
  add_subdirectory(Windows/Common)
elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
  add_subdirectory(MacOSX-Kernel)
endif()
if (CMAKE_SYSTEM_NAME MATCHES "Linux")
# note: POSIX is based on "gdb-remote" so it should be included
add_subdirectory(elf-core)
add_subdirectory(gdb-remote)
add_subdirectory(Utility)
elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
add_subdirectory(gdb-remote)
add_subdirectory(mach-core)
add_subdirectory(Utility)
elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
add_subdirectory(Utility)
endif ()
if (false)
add_subdirectory(scripted)
add_subdirectory(gdb-remote)
add_subdirectory(Utility)
add_subdirectory(elf-core)
add_subdirectory(mach-core)
add_subdirectory(minidump)
add_subdirectory(FreeBSDKernel)
endif()
