if (false)
if (CMAKE_SYSTEM_NAME MATCHES "Linux|Android")
  add_subdirectory(Linux)
  add_subdirectory(POSIX)
elseif (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
  add_subdirectory(FreeBSD)
  add_subdirectory(POSIX)
elseif (CMAKE_SYSTEM_NAME MATCHES "NetBSD")
  add_subdirectory(NetBSD)
  add_subdirectory(POSIX)
elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
  add_subdirectory(Windows/Common)
elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
  add_subdirectory(MacOSX-Kernel)
endif()
add_subdirectory(scripted)
add_subdirectory(gdb-remote)
add_subdirectory(Utility)
add_subdirectory(elf-core)
add_subdirectory(mach-core)
add_subdirectory(minidump)
add_subdirectory(FreeBSDKernel)
endif()
if (CMAKE_SYSTEM_NAME MATCHES "Linux")
  add_subdirectory(Linux)
  add_subdirectory(Utility)
elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
  # macOS must use debugserver with gdb protocol for debugging any process
  add_subdirectory(gdb-remote)
  add_subdirectory(Utility)
elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
  add_subdirectory(Windows/Common)
  add_subdirectory(Utility)
endif ()
