if (CMAKE_SYSTEM_NAME MATCHES "Linux|Android")
    add_subdirectory(Symtab)
elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
    add_subdirectory(NativePDB) 
    add_subdirectory(PDB) # TODO: reduce
elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
    add_subdirectory(Symtab)
endif()
if (false)
add_subdirectory(Breakpad)
add_subdirectory(CTF)
add_subdirectory(DWARF)
add_subdirectory(JSON)
add_subdirectory(NativePDB)
add_subdirectory(PDB)
add_subdirectory(Symtab)
endif ()
