if (CMAKE_SYSTEM_NAME MATCHES "Windows")
    # nativePDB is required to get symbols on the executable file
    add_subdirectory(NativePDB)
endif()
if (false)
add_subdirectory(Breakpad)
add_subdirectory(CTF)
add_subdirectory(DWARF)
add_subdirectory(JSON)
add_subdirectory(NativePDB)
add_subdirectory(PDB)
endif ()
add_subdirectory(Symtab)
